\name{NEWS}
\title{NEWS file for the \pkg{Uniquorn} bioconductor package }
\section{Changes in version 2.1.5 [2018-11-29]}{
    \subsection{Updated BiocView}{
        \itemize{
            \item Updated BiocView
        }
    }
}
\section{Changes in version 2.1.4 [2018-10-10]}{
    \subsection{Bioconductor compliance}{
        \itemize{
            \item Minor bugfixes regarding the removal of CCLs
        }
    }
}
\section{Changes in version 2.1.3 [2018-10-03]}{
    \subsection{Bioconductor compliance}{
        \itemize{
            \item Minor bugfixes regarding the removal of CCLs and reference libraries
        }
    }
}
\section{Changes in version 1.99.3 [2018-01-03]}{
    \subsection{Bioconductor compliance}{
        \itemize{
            \item Minor modifications to comply with Bioconductor regulations
        }
    }
}
\section{Changes in version 1.99.2 [2018-20-02]}{
    \subsection{Added RNA-seq and panel-seq capability}{
        \itemize{
            \item Some more minor bugfixes
        }
    }
}
\section{Changes in version 1.99.1 [2018-12-02]}{
    \subsection{Added RNA-seq and panel-seq capability}{
        \itemize{
            \item Minor bugfixes
        }
    }
}
\section{Changes in version 1.99.0 [2018-15-01]}{
    \subsection{Added RNA-seq and panel-seq capability}{
        \itemize{
            \item Modified the package to work with large scale RNA-seq and small scale panel-seq data
            \item Please note that this might break custom libraries. In case of questions please contact the author
        }
    }
}
\section{Changes in version 1.4.2 [2017-15-05]}{
    \subsection{Added critical scripts}{
        \itemize{
            \item Added a script to parse vcf files in a non-parallelized fashion.
        }
    }
}
\section{Changes in version 1.4.1 [2017-12-05]}{
    \subsection{Fixed yet another penalty function bug}{
        \itemize{
            \item Fixed critical bug which disabled identifying CCLs in single-thread mode.
        }