@@ -8,9 +8,8 @@
 #' Ensure that the right reference genome is used
 #' @param ref_gen Reference genome version
 #' @return Returns message if parsing process has succeeded
-#' @importFrom data.table fread data.table .SD
 #' @import R.utils stringr
-#' @usage 
+#' @usage
 #' initiate_canonical_databases(
 #'     cosmic_file = "CosmicCLP_MutantExport.tsv",
 #'     ccle_file = "CCLE_hybrid_capture1650_hg19_NoCommonSNPs_CDS_2012.05.07.maf",
@@ -67,7 +66,6 @@ initiate_canonical_databases = function(
 #' 
 #' @param cosmic_file Path to cosmic clp file in hard disk
 #' @param ref_gen Reference genome version
-#' @importFrom data.table fread data.table .SD
 #' @importFrom IRanges IRanges
 #' @importFrom stats aggregate
 #' @return The R Table sim_list which contains the CoSMIC CLP fingerprints 
@@ -147,7 +145,6 @@ parse_cosmic_genotype_data = function(cosmic_file, ref_gen = "GRCH37"){
 #' 
 #' @param ccle_file Path to CCLE file on hard disk
 #' @param ref_gen Reference genome version
-#' @importFrom data.table fread data.table .SD
 #' @importFrom IRanges IRanges
 #' @importFrom stats aggregate
 #' @return The R Table sim_list which contains the CCLE fingerprints
@@ -157,7 +154,7 @@ parse_ccle_genotype_data = function(ccle_file, ref_gen = "GRCH37"){
     
     # Only read in columns specified with subset
     subset = c(5, 6, 7, 16)
-    ccle_genotype_tab = data.table::fread(
+    ccle_genotype_tab = fread(
         ccle_file,
         select = subset,
         sep = "\t",
